--- a/docudio/package.json
+++ b/docudio/package.json
@@ -13,11 +13,13 @@
     "babel-plugin-file-loader": "^2.0.0",
     "clsx": "^1.1.1",
     "next": "^9.5.5",
+    "next-i18next": "^6.0.3",
     "next-images": "^1.6.0",
     "next-redux-wrapper": "^6.0.2",
     "notistack": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.8.8",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3"
   },
@@ -38,6 +40,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unused-imports": "^0.1.3",
     "flow-bin": "^0.132.0",
+    "react-intl-translations-manager": "^5.0.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
@@ -45,6 +48,7 @@
   },
   "scripts": {
     "dev": "next dev -p 3001",
+    "manage:translations": "node ./translationRunner.js",
     "start": "next start",
     "build": "next build",
     "test": "react-scripts test",
