--- a/docudio/package.json
+++ b/docudio/package.json
@@ -12,16 +12,25 @@
     "@testing-library/user-event": "^7.2.1",
     "babel-plugin-file-loader": "^2.0.0",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
+    "emotion": "^10.0.27",
+    "gray-matter": "^4.0.2",
     "next": "^9.5.5",
     "next-i18next": "^6.0.3",
     "next-images": "^1.6.0",
     "next-redux-wrapper": "^6.0.2",
     "notistack": "^1.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.1",
     "react-intl": "^5.8.8",
+    "react-markdown": "^5.0.2",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-syntax-highlighter": "^15.3.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.10.4",
