freaking translatioins and formatting and features and stuf!!!

--- a/docudio/package.json
+++ b/docudio/package.json
@@ -15,7 +15,8 @@
     "date-fns": "^2.16.1",
     "emotion": "^10.0.27",
     "gray-matter": "^4.0.2",
-    "next": "^9.5.5",
+    "markdown-translator": "^0.4.2",
+    "next": "^10.0.0",
     "next-i18next": "^6.0.3",
     "next-images": "^1.6.0",
     "next-redux-wrapper": "^6.0.2",
