--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,9 @@ on:
 
 jobs:
   build:
+    defaults:
+      run:
+        working-directory: docudio
 
     runs-on: ubuntu-latest
 
@@ -24,7 +27,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd docudio
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
