--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@main
     - name: ssh to server and do things
       uses: ./
       with:
