--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
           cd /home/ubuntu
           ls -lart
           sudo pm2 stop docudio
+          sudo npm run install
           sudo npm run build
           sudo pm2 start npm --name "docudio" --log /var/log/docudio  -- run start
 
