--- a/docudio/package.json
+++ b/docudio/package.json
@@ -34,6 +34,9 @@
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.10.4",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "cypress": "^4.12.1",
     "eslint": "^6.8.0",
@@ -53,7 +56,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "dev": "next dev -p 3001",
@@ -64,6 +68,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .eslintignore .",
     "flow": "flow",
+    "type-check": "tsc",
     "lintfix": "eslint --ignore-path .eslintignore --fix .",
     "cachebust": "node ./node_modules/@sparkbox/cachebust",
     "cacheclean": "node ./node_modules/@sparkbox/cachebust --restore",
