--- a/docudio/package.json
+++ b/docudio/package.json
@@ -22,6 +22,7 @@
     "notistack": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-archer": "^3.0.0",
     "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.1",
     "react-intl": "^5.8.8",
@@ -30,7 +31,8 @@
     "react-scripts": "3.4.3",
     "react-syntax-highlighter": "^15.3.0",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "translate-json-object": "^2.3.7"
   },
   "devDependencies": {
     "@babel/preset-flow": "^7.10.4",
