--- a/docudio/package.json
+++ b/docudio/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.1.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -13,7 +14,6 @@
     "babel-plugin-file-loader": "^2.0.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
-    "emotion": "^10.0.27",
     "gray-matter": "^4.0.2",
     "markdown-translator": "^0.4.2",
     "next": "^10.0.0",
